--- a/css/squares.css
+++ b/css/squares.css
@@ -17,6 +17,7 @@ h1{
 	margin: 30px auto;
 	border-radius: 20px;
 	font-size: 20px;
+	font-weight: bold;
 	padding: 5px 20px;
 	border: 4px solid black;
 	outline: none;
